syntax = "proto3";
package xyz.hyli.connect.proto;

option java_package = "xyz.hyli.connect.proto";
option java_outer_classname = "ApplicationProto";
option optimize_for = LITE_RUNTIME;

message ApplicationInfo {
  string package_name = 1;
  string app_name = 2;
  string version_name = 3;
  string main_activity = 4;
  ApplicationIcon icon = 5;
}

message ApplicationIcon {
  int32 width = 1;
  int32 height = 2;
  bytes data = 3;
}

message ApplicationList {
  repeated ApplicationInfo applications = 1;
}
